update ui: add bottomsheet dialog, update design on first screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,15 @@
     <string name="last_transaction">Последние операции</string>
     <string name="title">Описание</string>
     <string name="transaction_saved">Операция сохранена</string>
-    <string name="spending">Расход</string>
-    <string name="profit">Доход</string>
+    <string name="spending">Расходы</string>
+    <string name="profit">Доходы</string>
+    <string name="transfer">Перевод</string>
     <string name="search">Поиск</string>
     <string name="settings">Настройки</string>
     <string name="about">О приложении</string>
     <string name="analytics">Аналитика</string>
     <string name="categories">Категории</string>
+    <string name="total_balance">Общий баланс</string>
+    <string name="total_profit_for_last_month">Доход за этот месяц</string>
+    <string name="total_spent_for_last_month">Расходы за этот месяц</string>
 </resources>
