--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="transaction_date">Дата операции</string>
     <string name="transaction_date_subtitle_text">Сегодня, 21 декабря 2018</string>
     <string name="today">Сегодня</string>
+    <string name="transaction_save_as_template_title">Сохранить как шаблон</string>
+    <string name="transaction_save_as_template_subtitle">Шаблоны ускоряют ввод регулярных операций</string>
+    <string name="templates">Шаблоны</string>
 </resources>
