--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="transaction_save_as_template_title">Сохранить как шаблон</string>
     <string name="transaction_save_as_template_subtitle">Шаблоны ускоряют ввод регулярных операций</string>
     <string name="templates">Шаблоны</string>
+    <string name="edit_transaction">Изменить операцию</string>
 </resources>
