--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="transaction_empty">Операции не найдены</string>
     <string name="template_not_found">Шаблоны не найдены</string>
     <string name="category_not_found">Категории не найдены</string>
+    <string name="transactions">Операции</string>
 </resources>
