[busness-logic] [db-scheme] [di]
* add Account table, dao, repository, implement di for it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="template_not_found">Шаблоны не найдены</string>
     <string name="category_not_found">Категории не найдены</string>
     <string name="transactions">Операции</string>
+    <string name="base_account">Базовый аккаунт</string>
 </resources>
